{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 151,
  "lineage": "c7bff5a6-40cb-a059-616b-6cb634b5c8c3",
  "resources": [
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/regions/europe-west1/networkEndpointGroups/apig-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-10-24T18:33:08.762-07:00",
            "enable_cdn": false,
            "fingerprint": "iGAnl2Z9Cdc=",
            "id": "projects/lb-apig-cr-test/global/backendServices/my-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-lb-backend-default",
            "port_name": "http",
            "project": "lb-apig-cr-test",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/backendServices/my-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.neg"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.107.181.127",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-10-24T18:33:07.950-07:00",
            "id": "projects/lb-apig-cr-test/global/addresses/my-lb-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "my-lb-address",
            "prefix_length": 0,
            "project": "lb-apig-cr-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/addresses/my-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/lb-apig-cr-test/global/forwardingRules/my-lb",
            "ip_address": "34.107.181.127",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-lb",
            "port_range": "80",
            "project": "lb-apig-cr-test",
            "self_link": "https://www.googleapis.com/compute/beta/projects/lb-apig-cr-test/global/forwardingRules/my-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/targetHttpProxies/my-lb-http-proxy"
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/lb-apig-cr-test/global/forwardingRules/my-lb-https",
            "ip_address": "34.107.181.127",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-lb-https",
            "port_range": "443",
            "project": "lb-apig-cr-test",
            "self_link": "https://www.googleapis.com/compute/beta/projects/lb-apig-cr-test/global/forwardingRules/my-lb-https",
            "target": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/targetHttpsProxies/my-lb-https-proxy"
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_target_https_proxy.default",
            "module.lb-http.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-24T18:33:42.818-07:00",
            "id": "projects/lb-apig-cr-test/global/targetHttpProxies/my-lb-http-proxy",
            "name": "my-lb-http-proxy",
            "project": "lb-apig-cr-test",
            "proxy_bind": false,
            "proxy_id": 1989637405421503001,
            "self_link": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/targetHttpProxies/my-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/urlMaps/my-lb-https-redirect"
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-24T18:41:44.496-07:00",
            "id": "projects/lb-apig-cr-test/global/targetHttpsProxies/my-lb-https-proxy",
            "name": "my-lb-https-proxy",
            "project": "lb-apig-cr-test",
            "proxy_bind": false,
            "proxy_id": 5748149838608498743,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/targetHttpsProxies/my-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/sslCertificates/my-lb-certificate-20221025014557538400000001"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/urlMaps/my-lb-url-map"
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-24T18:33:31.109-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/backendServices/my-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Pj_00PhLp60=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/lb-apig-cr-test/global/urlMaps/my-lb-url-map",
            "map_id": 5532050332931752452,
            "name": "my-lb-url-map",
            "path_matcher": [],
            "project": "lb-apig-cr-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/urlMaps/my-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_region_network_endpoint_group.neg",
            "module.lb-http.google_compute_backend_service.default"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-24T18:33:07.852-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "txId8P4X1SQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/lb-apig-cr-test/global/urlMaps/my-lb-https-redirect",
            "map_id": 3544145524799734332,
            "name": "my-lb-https-redirect",
            "path_matcher": [],
            "project": "lb-apig-cr-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lb-apig-cr-test/global/urlMaps/my-lb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}